--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,12 @@
 
     <% if (blogs.length > 0) { %>
       <% blogs.forEach(blog => { %>
+        <a class="single" href="/blogs/<%= blog.id %>">
 
-        <h3 class="title"><%= blog.title %></h3>
-        <p class="snippet"><%= blog.snippet %></p>
+          <h3 class="title"><%= blog.title %></h3>
+          <p class="snippet"><%= blog.snippet %></p>
+
+        </a>
 
       <% }) %>
     <% } else { %>
